# CiliaSim

./: .gitignore  .pre-commit-config.yaml  README.md  cell.py  functions.py  jit_functions.py  manager.py  manager_testing.py  plotting.py  pyproject.toml  testing.py  thoughts.txt  tissue.py  tissue_testing.py
benchmarks/: tissue_simulation.py
ciliasim/: __init__.py  jit_functions.py  manager.py  plotting.py  tissue.py
examples/: example.py  manager_testing.py  tissue_testing.py
src/: jit_functions.py  plotting.py  tissue.py
src/CiliaSim/: jit_functions.py  plotting.py  tissue.py
src/CiliaSim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_tissue.py  tissue_testing.py
